# ai-chatbot

./: .gitignore  docker-compose.yml  package.json  pnpm-lock.yaml
app/: layout.tsx  not-found.tsx
app/(auth)/login/: page.tsx
app/(auth)/register/: page.tsx
app/(chat)/: layout.tsx
app/reports/: layout.tsx
components/: ag-grid-pagination.tsx  app-aggrid.tsx  app-sidebar.tsx  artifact-actions.tsx  auth-form.tsx  chat-header.tsx  greeting.tsx  message-actions.tsx  multimodal-input.tsx  sidebar-history.tsx  sidebar-toggle.tsx  sidebar-user-nav.tsx  suggested-actions.tsx  visibility-selector.tsx
components/charts/: MonthlySalesChart.tsx
components/ui/: sidebar.tsx
data/postgres/: postmaster.pid
data/postgres/global/: 1260  1262  2671  2676  pg_control
data/redis/: dump.rdb
langgraph-rag/: README.md  analyze_excel.py  create_db_and_insert.py  import_inventory.py  import_zmmr0001_materials.py  import_zmmr0016_inventory.py  import_zsdr0062_sales_orders.py  import_zsdr0340_sales.py  langchain_sql_agent.py  langgraph_rag.py  main.py  pyproject.toml  rename_columns_korean.py  requirements.txt  sap_full_table_import.py  sap_import_inventory.py  sap_ke33_import.py  sap_standard_tables.py  sap_to_postgres.py  sap_universal_tcode_import.py  sap_zmmr0016_import.py  sap_zpacheck0_import.py  sap_zsd_kunnr_import.py  setup_sap_env.sh  test_complex_query.py  test_sap_connection.py
lib/: errors.ts  types.ts
lib/ai/: entitlements.ts  models.ts  prompts.ts  providers.ts
lib/ai/tools/: text-to-sql.ts
lib/db/: queries.ts
references/: ZSDR0164.txt  ZSDR0340.txt
(+24 files in other folders)
